src/objects/CM_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Active_Clients__c</fullName>
        <formula>Active__c -  Unpaid_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Rate__c</fullName>
        <formula>IF(Active__c==0, 0, Cancelled__c /  Active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancelled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_rate__c</fullName>
        <formula>Cancelled_Revenue__c /  Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_after_Waivers__c</fullName>
        <formula>IF(Active__c==0, 0, (Cancelled__c -  Waivers_Approved__c ) / Active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled after Waivers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offsets_Revenue_rate__c</fullName>
        <formula>Total_Offsets__c / Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offsets Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paused_Rate__c</fullName>
        <formula>IF(Active__c==0, 0, Paused__c  /  Active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paused Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paused_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paused Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paused__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paused</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refunds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setups__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Setups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team COM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Team B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Team B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Offsets__c</fullName>
        <formula>Waivers__c + Credits__c + Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offsets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pause_Rate__c</fullName>
        <formula>IF(Active__c==0, 0, Total_Pause__c  /  Active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pause Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Pause__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Pause</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unpaid Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unpaid Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Void_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Void Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waivers_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waivers Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waivers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waivers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CM Stats</label>
    <nameField>
        <label>CM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>